--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BB Bank</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <h1>Welcome To BB Bank</h1>
+    <h1 class="text-5xl text-center mt-6">Welcome To <span class="font-semibold text-violet-600">BB Bank</span></h1>
 </body>
 </html>
