--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <h1 class="text-5xl text-center mt-6">Welcome To <span class="font-semibold text-violet-600">BB Bank</span></h1>
+    <header>
+        <h1 class="text-5xl text-center mt-6">Welcome To <span class="font-semibold text-violet-600">BB Bank!!!!</span></h1>
+    </header>
+    <main>
+        <section class="bg-blue-200 w-9/12 mx-auto p-8 mt-10">
+            <h3 class="text-3xl mb-4">Please Login</h3>
+            <div>
+                <input type="email" name="" id="user-email" placeholder="your email" class="w-9/12 block mb-2 px-4 py-2">
+                <input type="password" name="" id="user-password" placeholder="your password" class="w-9/12 block mb-2 px-4 py-2">
+                <button class="bg-amber-600 px-7 py-1 text-white hover:bg-amber-200" id="btn-submit">Submit</button>
+            </div>
+        </section>
+    </main>
+
+
+
+
+
+
+
+
+
+    <script src="login.js"></script>
 </body>
 </html>
